--- a/react-cart.html
+++ b/react-cart.html
@@ -8,20 +8,37 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/react/0.13.3/JSXTransformer.js"></script>
     <script src="/jquery.min.js"></script>
     <style type="text/css">
-     div.item-selector ul {
+     div.item-selector label {
        list-style-type: none;
-       padding: 0px;
+       padding-bottom: 0px;
        margin: 0px;
+       display: block;
+     }
+     div.price-indicator {
+       display: inline-block;
+     }
+     div.order-form {
+       border: 1px solid black;
+       max-width: 250px;
+     }
+     div.price-indicator {
+       display: inline-block;
+     }
+     div.button-view {
+       display: block;
      }
     </style>
   </head>
   <body>
     <div id="content"></div>
-    <script type="text/jsx" src="check-option.jsx"></script>
-    <script type="text/jsx" src="item-selector.jsx"></script>
-    <script type="text/jsx" src="base-selector.jsx"></script>
-    <script type="text/jsx" src="topping-selector.jsx"></script>
-    <script type="text/jsx" src="price-indicator.jsx"></script>
+    <script type="text/jsx" src="PriceIndicator.jsx"></script>
+    <script type="text/jsx" src="ItemSelector.jsx"></script>
+    <script type="text/jsx" src="MultipleItemSelector.jsx"></script>
+    <script type="text/jsx" src="CheckBox.jsx"></script>
+    <script type="text/jsx" src="BurritoController.jsx"></script>
+    <script type="text/jsx" src="TextFieldView.jsx"></script>
+    <script type="text/jsx" src="OrderController.jsx"></script>
+    <script type="text/jsx" src="ButtonView.jsx"></script>
     <script type="text/jsx" src="react-cart.jsx"></script>
   </body>
 </html>
