--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-<!-- react-cart.html -->
 <!DOCTYPE html>
 <html>
   <head>
@@ -39,6 +38,6 @@
     <script type="text/jsx" src="TextFieldView.jsx"></script>
     <script type="text/jsx" src="OrderController.jsx"></script>
     <script type="text/jsx" src="ButtonView.jsx"></script>
-    <script type="text/jsx" src="react-cart.jsx"></script>
+    <script type="text/jsx" src="index.jsx"></script>
   </body>
 </html>
