More options and fields

--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@
   <script type="text/jsx" src="/assets/jsx/MultipleItemSelector.jsx"></script>
   <script type="text/jsx" src="/assets/jsx/CheckBox.jsx"></script>
   <script type="text/jsx" src="/assets/jsx/BurritoController.jsx"></script>
+  <script type="text/jsx" src="/assets/jsx/TextAreaView.jsx"></script>
   <script type="text/jsx" src="/assets/jsx/TextFieldView.jsx"></script>
   <script type="text/jsx" src="/assets/jsx/OrderController.jsx"></script>
   <script type="text/jsx" src="/assets/jsx/ButtonView.jsx"></script>
