Add phone number

--- a/index.html
+++ b/index.html
@@ -20,6 +20,8 @@
 
   <!-- Latest compiled and minified JavaScript -->
   <script src="/assets/js/bootstrap.min.js"></script>
+
+  <!-- Parse -->
   <script src="//www.parsecdn.com/js/parse-1.5.0.min.js"></script>
 </head>
 <body>
