--- a/index.html
+++ b/index.html
@@ -38,6 +38,12 @@
       <h1>Order now!</h1>
       <p class="lead">First 20 people get a burrito...</p>
       <div id="content"></div>
+      <iframe src="https://vine.co/v/MO9E5bA2Ulj/embed/simple"
+	      width="300"
+	      height="300"
+	      frameborder="0">
+      </iframe>
+      <script src="https://platform.vine.co/static/scripts/embed.js"></script>
     </div>
 
     <footer class="footer">
