--- a/done.html
+++ b/done.html
@@ -1,3 +1,4 @@
+<h2 style="text-color: red;">Please Venmo Maxwell-Bernstein</h2>
 <img src="http://i.imgur.com/JlzLmOf.jpg" style="height: 400px;">
 <br />
 <br />
