--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     </div>
     <div class="jumbotron">
       <h1>Order now!</h1>
-      <p class="lead">First 20 people get a burrito...</p>
+      <p class="lead">Orders close at 5:59pm on Wednesday!</p>
       <div id="content"></div>
       <iframe src="https://vine.co/v/MO9E5bA2Ulj/embed/simple"
 	      width="300"
